Fri Mar  4 23:09:12 2011  CHIKANAGA Tomoyuki  <nagachika00@gmail.com>

	* test/testunit/test_parallel.rb
	  (test_should_run_all_without_any_leaks): consider that the order of
	  testcase could change. [ruby-dev:43300] [Bug #4466]

Fri Mar  4 22:01:14 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* io.c (io_cntl): change 'cmd' type to int. ioctl and fcntl need to
	  be passed int.
	* io.c (rb_io_ctl): ditto.

Fri Mar  4 21:10:40 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* configure.in: save warnflags. the patch is created by Eric Wong.
	  [Bug #4465]

Wed Mar  2 21:15:00 2011  Tanaka Akira  <akr@fsij.org>

	* ext/openssl/ossl_pkey_dsa.c: parenthesize macro arguments.

Thu Mar  3 22:10:26 2011  NAKAMURA Usaku  <usa@ruby-lang.org>

	* process.c (check_exec_redirect_fd, check_exec_redirect): raise
	  ArgumentError if fd >= 3 on Windows because the feature is not
	  supported.

	* test/ruby/test_process.rb (test_execopts_redirect): remove meaningless
	  argument.

Thu Mar  3 21:21:42 2011  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/ruby/test_process.rb (test_execopts_redirect): redirecting fd
	  >= 3 is not supported on Windows, so should not specify such options
	  when calling spawn or others.

Thu Mar  3 18:59:04 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* string.c (rb_str_slice_bang): raise error when the string is frozen.

Thu Mar  3 14:25:19 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* strftime.c (STRFTIME): return 0 and ERANGE when precision is too
	  large. [ruby-dev:43284] fixes #4456

Thu Mar  3 00:46:51 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* addr2line.c (uleb128): cast the value to unsigned long.

	* addr2line.c (fill_lines): print error when lseek fails.

Thu Mar  3 00:36:29 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/rexml/encoding.rb (REXML::Encoding#encoding=): store @encoding
	  a String which means the name of the encoding.
	  this partially revert r29646.

	* lib/rexml/document.rb: follow above.
